force-app/main/default/objects/User_Trailmix_Badge__c/User_Trailmix_Badge__c.object-meta.xml
<CustomObject>
    <label>User Trailmix Badge</label>
    <nameField>
        <displayFormat>UTB-{00000}</displayFormat>
        <label>User Trailmix Badge Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Trailmix Badges</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>