force-app/main/default/objects/User_Trailmix_Badge__c/fields/User_Badge__c.field-meta.xml
<CustomField>
    <fullName>User_Badge__c</fullName>
    <label>User Badge</label>
    <referenceTo>trailheadapp__User_Badge__c</referenceTo>
    <relationshipLabel>User Trailmix Badges</relationshipLabel>
    <relationshipName>User_Trailmix_Badges</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>