force-app/main/default/objects/User_Trailmix_Badge__c/fields/User_Trailmix__c.field-meta.xml
<CustomField>
    <fullName>User_Trailmix__c</fullName>
    <label>User Trailmix</label>
    <referenceTo>trailheadapp__User_Trailmix__c</referenceTo>
    <relationshipLabel>User Trailmix Badges</relationshipLabel>
    <relationshipName>User_Trailmix_Badges</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>